--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
       <h1>Employee Payroll Tracker</h1>
     </header>
     <div class="card">
+      <!-- added card header -->
       <div class="card-header">
        <h2>Employee Roster</h2>
       </div>
+      <!-- add card body -->
       <div class="card-body">
        <table>
         <thead>
@@ -27,11 +29,14 @@
             <th>Salary</th>
           </tr>
         </thead>
+        <!-- card table -->
         <tbody id="employee-table">
         </tbody>
        </table>
       </div>
+      <!-- card footer -->
       <div class="card-footer">
+        <!-- card button -->
         <button id="add-employees-btn" class="btn">Add Employees</button>
       </div>
     </div>
